--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Montserrat+Alternates:ital,wght@0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;1,200;1,300&display=swap" rel="stylesheet">
   <title>Barefoot Nomad</title>
 </head>
-<body>
+<body style="margin: 0; padding: 0">
   <div id="root"></div>
 </body>
 </html>
